--- a/add/index.html
+++ b/add/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мій особистий блог</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="/add/photo/favicon-32x32.png"/>
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
                 <h2>Кожухар Андрій</h2>
             </div>
             <div class="header-login">
-                <a href="" class="login-a">Вхід</a>
+                <a href="login.html" class="login-a">Вхід</a>
                 <a href="">Регістрація</a>
             </div>
         </div>   
@@ -30,12 +31,15 @@
     <div class="description-book">
         <h2>Тарас Шевчеко "Мені тринадцятий минало"</h2>
         <p> &nbsp;&nbsp;&nbsp;&nbsp; До цієї книжки увійшли вірші Тараса Григоровича Шевченка про тяжке життя селянських дітей за давніх часів кріпаччини, про материнське щастя й материнське горе, про людську мудрість, славну історичну минувшину, а також про велику любов до рідного народу.</p>
-        <a href="">Детальніше...</a>
+        <a href="book.html">Детальніше...</a>
     </div>
-    
 </section>
-    <footer>
 
-    </footer>
+<!-- footer -->
+
+<footer>
+    <p>&copy; 2024Кожухар Андрій</p>
+    <p>Розробник курсант 212 навчальної групи Кожухар А.О.</p>
+</footer>
 </body>
 </html>
