--- a/add/index.html
+++ b/add/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="header-login">
                 <a href="login.html" class="login-a">Вхід</a>
-                <a href="">Регістрація</a>
+                <a href="register.html">Регістрація</a>
             </div>
         </div>   
     </header>
