I`m repleced with the correct wire

--- a/add/commandsGit.html
+++ b/add/commandsGit.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="header-login">
                         <a href="login.html" class="login-a">Вхід</a>
-                        <a href="">Регістрація</a>
+                        <a href="register.html">Регістрація</a>
                     </div>
                 </div>   
             </header>
@@ -128,8 +128,8 @@
             <p><small>When in doubt, use git help</small></p>
             <p><b>$ git command --help</b></p>
             <br>
-            <p><small>Or visit <a href="https://github.com/BoberXmolodoy/pz-1_4/tree/git_commands"
-                        id="a11">https://github.com/BoberXmolodoy/pz-1_4/tree/git_commands</a><br>
+            <p><small>Or visit <a href="https://github.com/AndrewOleksandrovych/group_task_blog"
+                        id="a11">https://github.com/AndrewOleksandrovych/group_task_blog</a><br>
                     for official GitHub training</small>
             </p>
         </div>
